@@ -16,17 +16,19 @@ import org.elasticsearch.action.support.master.AcknowledgedRequest;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.unit.ByteSizeValue;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.mapper.MapperService;
+import org.elasticsearch.tasks.CancellableTask;
+import org.elasticsearch.tasks.Task;
+import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.xcontent.ObjectParser;
 import org.elasticsearch.xcontent.ParseField;
 import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
-import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.action.ValidateActions.addValidationError;
 
@@ -46,6 +48,7 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
     private static final ParseField MAX_DOCS_CONDITION = new ParseField(MaxDocsCondition.NAME);
     private static final ParseField MAX_SIZE_CONDITION = new ParseField(MaxSizeCondition.NAME);
     private static final ParseField MAX_PRIMARY_SHARD_SIZE_CONDITION = new ParseField(MaxPrimaryShardSizeCondition.NAME);
+    private static final ParseField MAX_PRIMARY_SHARD_DOCS_CONDITION = new ParseField(MaxPrimaryShardDocsCondition.NAME);
 
     static {
         CONDITION_PARSER.declareString(
@@ -69,6 +72,10 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
                 new MaxPrimaryShardSizeCondition(ByteSizeValue.parseBytesSizeValue(s, MaxPrimaryShardSizeCondition.NAME))
             ),
             MAX_PRIMARY_SHARD_SIZE_CONDITION
+        );
+        CONDITION_PARSER.declareLong(
+            (conditions, value) -> conditions.put(MaxPrimaryShardDocsCondition.NAME, new MaxPrimaryShardDocsCondition(value)),
+            MAX_PRIMARY_SHARD_DOCS_CONDITION
         );
 
         PARSER.declareField(
@@ -123,7 +130,7 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
     private String rolloverTarget;
     private String newIndexName;
     private boolean dryRun;
-    private final Map<String, Condition<?>> conditions = new HashMap<>(2);
+    private final Map<String, Condition<?>> conditions = Maps.newMapWithExpectedSize(2);
     // the index name "_na_" is never read back, what matters are settings, mappings and aliases
     private CreateIndexRequest createIndexRequest = new CreateIndexRequest("_na_");
 
@@ -163,7 +170,7 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
         out.writeOptionalString(newIndexName);
         out.writeBoolean(dryRun);
         out.writeCollection(
-            conditions.values().stream().filter(c -> c.includedInVersion(out.getVersion())).collect(Collectors.toList()),
+            conditions.values().stream().filter(c -> c.includedInVersion(out.getVersion())).toList(),
             StreamOutput::writeNamedWriteable
         );
         createIndexRequest.writeTo(out);
@@ -256,6 +263,17 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
         this.conditions.put(maxPrimaryShardSizeCondition.name, maxPrimaryShardSizeCondition);
     }
 
+    /**
+     * Adds a size-based condition to check if the docs of the largest primary shard has at least <code>numDocs</code>
+     */
+    public void addMaxPrimaryShardDocsCondition(long numDocs) {
+        MaxPrimaryShardDocsCondition maxPrimaryShardDocsCondition = new MaxPrimaryShardDocsCondition(numDocs);
+        if (this.conditions.containsKey(maxPrimaryShardDocsCondition.name)) {
+            throw new IllegalArgumentException(maxPrimaryShardDocsCondition.name + " condition is already set");
+        }
+        this.conditions.put(maxPrimaryShardDocsCondition.name, maxPrimaryShardDocsCondition);
+    }
+
     public boolean isDryRun() {
         return dryRun;
     }
@@ -282,5 +300,10 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
     // param isTypeIncluded decides how mappings should be parsed from XContent
     public void fromXContent(boolean isTypeIncluded, XContentParser parser) throws IOException {
         PARSER.parse(parser, this, isTypeIncluded);
+    }
+
+    @Override
+    public Task createTask(long id, String type, String action, TaskId parentTaskId, Map<String, String> headers) {
+        return new CancellableTask(id, type, action, "", parentTaskId, headers);
     }
 }
