@@ -45,7 +45,6 @@ import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.common.settings.Setting.intSetting;
@@ -160,7 +159,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
             configuredSeedNodes,
             configuredSeedNodes.stream()
                 .map(seedAddress -> (Supplier<DiscoveryNode>) () -> resolveSeedNode(clusterAlias, seedAddress, proxyAddress))
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
@@ -339,7 +338,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
                 onFailure.accept(e);
             });
         } else {
-            listener.onFailure(new NoSeedNodeLeftException(clusterAlias));
+            listener.onFailure(new NoSeedNodeLeftException(strategyType(), clusterAlias));
         }
     }
 
@@ -367,7 +366,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
 
         @Override
         public void handleResponse(ClusterStateResponse response) {
-            handleNodes(response.getState().nodes().getNodes().valuesIt());
+            handleNodes(response.getState().nodes().getNodes().values().iterator());
         }
 
         private void handleNodes(Iterator<DiscoveryNode> nodesIter) {
@@ -513,7 +512,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
         }
     }
 
-    private boolean seedsChanged(final List<String> oldSeedNodes, final List<String> newSeedNodes) {
+    private static boolean seedsChanged(final List<String> oldSeedNodes, final List<String> newSeedNodes) {
         if (oldSeedNodes.size() != newSeedNodes.size()) {
             return true;
         }
@@ -522,7 +521,7 @@ public class SniffConnectionStrategy extends RemoteConnectionStrategy {
         return oldSeeds.equals(newSeeds) == false;
     }
 
-    private boolean proxyChanged(String oldProxy, String newProxy) {
+    private static boolean proxyChanged(String oldProxy, String newProxy) {
         if (oldProxy == null || oldProxy.isEmpty()) {
             return (newProxy == null || newProxy.isEmpty()) == false;
         }
